--- a/rick_and_morty.html
+++ b/rick_and_morty.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-
+    <h1>Rick and Morty Characters</h1>
     <div>
         <figure> <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" width = "100" alt="Rick Sanchez">
             <ul>
